loopfor.LoopStairs.scala.error
Erreur de compilation :
LoopStairs:1: error: not found: value False
while (estFaceMur==False){
                   ^LoopStairs:3: error: not found: value True
  while (estFaceMur==True){
                     ^